fixed layout bug

--- a/client/src/components/Navbar/Navbar.module.sass
+++ b/client/src/components/Navbar/Navbar.module.sass
@@ -10,7 +10,7 @@
   height: $navbar_h
   background-color: #0d47a1
   padding: 0 20px
-  z-index: 2
+  z-index: 4
 
 .logo
   color: #fff
